# GitHub-Analyzer-MCP

./: README (2).md  pyproject.toml
src/github_analyzer_mcp/: server.py
